--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       </p>
     </div>
     <div class="about-video">
-      <video src="/media/12359943_1920_1080_24fps.mp4" autoplay muted loop playsinline></video>
+      <video src="./media/12359943_1920_1080_24fps.mp4" autoplay muted loop playsinline></video>
     </div>
   </div>
 </div>
@@ -88,7 +88,7 @@ Bootstrap
       <p>A modern personal portfolio website built using HTML, CSS, and JavaScript. Includes animation and responsive design.</p>
     </div>
     <div class="project-image">
-      <img src="/media/Screenshot 2025-05-21 182815.png" alt="Project 1">
+      <img src="./media/Screenshot 2025-05-21 182815.png" alt="Project 1">
     </div>
   </div>
 
@@ -98,7 +98,7 @@ Bootstrap
       <p>A cafe website project typically involves creating an online presence for a cafe, enabling customers to learn about the cafe, view the menu, potentially order online, and find contact information and location details. The website can be a crucial tool for promoting the cafe and increasing business. </p>
     </div>
     <div class="project-image">
-      <img src="/media/Screenshot 2025-05-23 204002.png" alt="Project 2">
+      <img src="./media/Screenshot 2025-05-23 204002.png" alt="Project 2">
     </div>
   </div>
  
@@ -112,7 +112,7 @@ Bootstrap
 
   <div class="certificate-grid">
     <div class="certificate-card">
-      <img src="/media/A Saumsan asirvatham.jpg" alt="Certificate 1">
+      <img src="./media/A Saumsan asirvatham.jpg" alt="Certificate 1">
       <div class="cert-description">
         <h3>Java full Stack Developer</h3>
         <p>A Java Full Stack Developer is a versatile software engineer skilled in both frontend and backend development, using Java as the core backend language. They design, develop, and maintain end-to-end web applications — from building responsive user interfaces to integrating secure databases and APIs.</p>
