--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@ Bootstrap
 
 <footer class="footer-video-section">
   <video autoplay muted loop playsinline class="footer-bg-video">
-    <source src="/media/7989701-hd_1920_1080_25fps.mp4" type="video/mp4">
+    <source src="./media/7989701-hd_1920_1080_25fps.mp4" type="video/mp4">
     
   </video>
 
